--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <tr>
       <th>
 
-        <td><img src="david2.png" alt="david černý foto"></td>
+        <td><img src="DaveCV/david2.png" alt="david černý foto"></td>
 
       </th>
       <th>
